--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -32,5 +32,6 @@
         <item>com.android.location.fused</item>
         <!-- The (faked) microg fused location provider -->
         <item>com.google.android.gms</item>
+        </string-array>
     
 </resources>
