--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -24,7 +24,7 @@
     <!-- The RadioAccessFamilies supported by the device.
          Empty is viewed as "all".  Only used on devices which
          don't support RIL_REQUEST_GET_RADIO_CAPABILITY
-         format is UMTS|LTE|... -->p
+         format is UMTS|LTE|... -->
     <string translatable="false" name="config_radio_access_family">LTE|CDMA|EVDO|GSM|WCDMA</string>
      
      <string-array name="config_locationProviderPackageNames" translatable="false">
@@ -32,6 +32,6 @@
         <item>com.android.location.fused</item>
         <!-- The (faked) microg fused location provider -->
         <item>com.google.android.gms</item>
-        </string-array>
+     </string-array>
     
 </resources>
